...
        }
    }
    
    private val mainnetTokens = listOf(
        Token(
            address = "So11111111111111111111111111111111111111112",
            symbol = "SOL",
            name = "Solana",
            decimals = 9,
            imageUrl = null
        ),
        Token(
            address = "EPjFWdd5AufqSSqeM2qN1xzybapC8G4wEGGkZwyTDt1v",
            symbol = "USDC",
            name = "USD Coin",
            decimals = 6,
            imageUrl = null
        ),
        Token(
            address = "9BB6NFEcjBCtnNLFko2FqVQBq8HHM13kCyYcdQbgpump",
...
